# claude-meteor

./: .gitignore  BUILD_RELEASES.md  LICENSE  PRD-PLAN.md  README.md  package.json  vite.config.ts
docs/: architecture.md  security-model.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/adapter/: anthropic.rs  mod.rs
src-tauri/src/adapter/openai/: error.rs  mod.rs  request.rs  response.rs  stream.rs  types.rs
src-tauri/src/commands/: log_cmd.rs  provider_cmd.rs  server_cmd.rs
src-tauri/src/config/: store.rs
src-tauri/src/db/: logs.rs  migration.rs  stats.rs
src-tauri/src/proxy/: handler.rs  router.rs  server.rs
src-tauri/src/services/: log_service.rs  mod.rs  provider_service.rs  proxy_service.rs
src/components/dashboard/: DashboardPage.tsx
src/components/layout/: TopNav.tsx
src/components/providers/: ProviderList.tsx
src/components/providers/components/: ProviderCard.tsx  ProviderDialog.tsx  ProviderHeader.tsx
src/components/settings/: SettingsPage.tsx
src/components/shared/: RouteLoader.tsx
src/hooks/: index.ts  useAppSettings.ts  useLogs.ts  useProviders.ts  useProxyStatus.ts  useStats.ts
